# code-challenges

./: .gitignore
c++/introduction_to_programming/: CMakeLists.txt
c++/introduction_to_programming/arrays/: task1.cpp  task10.cpp  task11.cpp  task13.cpp  task2.cpp  task4.cpp  task5.cpp  task6_2.cpp  task9.cpp
c++/introduction_to_programming/conditions/: task1.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task16.cpp  task18.cpp  task19.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
c++/introduction_to_programming/cycles/: task10.cpp  task11.cpp  task12.cpp  task14.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
c++/introduction_to_programming/functions/: task1.cpp  task11.cpp  task12.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
c++/introduction_to_programming/maps_and_sets/: task2.cpp  task4.cpp
c++/introduction_to_programming/matrices/: task10.cpp  task13.cpp  task3.cpp  task4.cpp  task5.cpp  task8.cpp  task9.cpp
c++/introduction_to_programming/numbers/: task1.cpp  task11.cpp  task12.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task8.cpp  task9.cpp
c++/introduction_to_programming/strings/: task1.cpp  task2.cpp  task4.cpp  task5.cpp  task6.cpp
c++/leetcode/: 008_finding_3_digit_even_numbers.cpp
javascript/: package.json  tsconfig.json
javascript/codewars/: 001_K8_multiply.js  002_K6_who-likes-it.js  003_K7_ descending-rder.js  004_K6_array-diff.js  005_K6_split-strings.js  006_K6_create-phone-number.js  029_K0_.js  057_K6_decode-the-morse-code-1.ts  068_K7_leap-years.ts  069_K6_matrix-transpose.js  069_K6_matrix-transpose.ts  070_K6_two-sum.js  070_K6_two-sum.ts  071_K6_find the-longest-substring-consisting-of-unique.js  072_K4_decode-the-morse-code-2.ts
javascript/leetcode/: 001_transpose-matrix.js  001_transpose-matrix.md  002_two-sum.js  002_two-sum.md  003_longest_substring_without_repeating_characters.js  003_longest_substring_without_repeating_characters.md  003_longest_substring_without_repeating_characters.ts  004_add-two-numbers.md  004_add-two-numbers.ts  005_median_of_two_sorted_arrays.md  005_median_of_two_sorted_arrays.ts  006_firts_unique_character_in_a_string.md  006_firts_unique_character_in_a_string.ts  007_merge_intervals.md  007_merge_intervals.ts  008_finding_3_digit_even_numbers.md  008_finding_3_digit_even_numbers.ts  009_longest-palindromic-substring.ts  010_find-smallest-letter-greater-than-target.md  010_find-smallest-letter-greater-than-target.ts  011_flood-fill.md  011_flood-fill.ts  100_longest-palindromic-substring.md  999_binary-tree-maximum-path-sum.md  999_binary-tree-maximum-path-sum.ts  999_design-a-number-container-system.md  999_design-a-number-container-system.ts  999_longest-palindromic-substring.ts
javascript/other/: 002.ts  003.ts  004.ts  005.ts  006.ts  007.ts  008.ts  009.js  010.ts  011.ts
javascript/tools/: test.ts
python/backup/: backup_v1.py  backup_v2.py  backup_v3.py
(+70 files in other folders)
