cmake_minimum_required(VERSION 3.26)
project(introduction_to_programming)

set(CMAKE_CXX_STANDARD 17)

add_executable(introduction_to_programming main.cpp
        conditions/task1.cpp
        conditions/task2.cpp
        conditions/task3.cpp
        conditions/task4.cpp
        conditions/task5.cpp
        conditions/task6.cpp
        conditions/task7.cpp
        conditions/task8.cpp
        conditions/task9.cpp
        conditions/task10.cpp
        conditions/task11.cpp
        conditions/task12.cpp
        conditions/task13.cpp
        conditions/task14.cpp
        conditions/task15.cpp
        conditions/task16.cpp
        conditions/task17.cpp
        conditions/task18.cpp
        conditions/task19.cpp
        cycles/task1.cpp
        cycles/task2.cpp
        cycles/task3.cpp
        cycles/task4.cpp
        cycles/task5.cpp
        cycles/task6.cpp
        cycles/task7.cpp
        cycles/task8.cpp
        cycles/task9.cpp
        cycles/task10.cpp
        cycles/task11.cpp
        cycles/task12.cpp
        cycles/task13.cpp
        cycles/task14.cpp
        numbers/task1.cpp
        numbers/task2.cpp
        numbers/task3.cpp
        numbers/task4.cpp
        numbers/task5.cpp
        numbers/task6.cpp
        numbers/task7.cpp
        numbers/task8.cpp
        numbers/task9.cpp
        numbers/task10.cpp
        numbers/task11.cpp
        numbers/task12.cpp
        arrays/task1.cpp
        arrays/task2.cpp
        arrays/task3.cpp
        arrays/task4.cpp
        arrays/task5.cpp
        arrays/task6.cpp
        arrays/task6_2.cpp
        arrays/task7.cpp
        arrays/task8.cpp
        arrays/task9.cpp
        arrays/task10.cpp
        arrays/task11.cpp
        arrays/task12.cpp
        arrays/task13.cpp
        arrays/task14.cpp
        matrices/task1.cpp
        matrices/task2.cpp
        matrices/task3.cpp
        matrices/task4.cpp
        matrices/task5.cpp
        matrices/task6.cpp
        matrices/task7.cpp
        matrices/task8.cpp
        matrices/task9.cpp
        matrices/task10.cpp
        matrices/task11.cpp
        matrices/task12.cpp
        matrices/task13.cpp
        functions/task1.cpp
        functions/task2.cpp
        functions/task3.cpp
        functions/task4.cpp
        functions/task5.cpp
        functions/task6.cpp
        functions/task7.cpp
        functions/task8.cpp
        functions/task9.cpp
        functions/task10.cpp
        functions/task11.cpp
        functions/task12.cpp
        strings/task1.cpp
        strings/task2.cpp
        strings/task3.cpp
        strings/task4.cpp
        strings/task5.cpp
        strings/task6.cpp
        strings/task7.cpp
        maps_and_sets/task1.cpp
        maps_and_sets/task2.cpp
        maps_and_sets/task3.cpp
        maps_and_sets/task4.cpp
        maps_and_sets/task5.cpp
)
